--- a/back-end/DockerFile
+++ b/back-end/DockerFile
@@ -1,22 +1,33 @@
-# Use uma imagem base do Python (versão 3.9, por exemplo)
-FROM python:3.9-slim
+FROM python:3.10-slim
 
-# Instala dependências do sistema e o Chrome
-RUN apt-get update && apt-get install -y wget unzip \
-    && wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
-    && dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
+# Atualizar e instalar dependências
+RUN apt-get update && apt-get install -y \
+    wget \
+    unzip \
+    curl \
+    libnss3 \
+    libxss1 \
+    libasound2 \
+    fonts-liberation \
+    libappindicator3-1 \
+    libgbm-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-# Instala o ChromeDriver
-RUN pip install -U selenium webdriver-manager
+# Instalar o Google Chrome
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb \
+    && dpkg -i google-chrome-stable_current_amd64.deb || apt-get -fy install \
+    && rm google-chrome-stable_current_amd64.deb
 
-# Cria o diretório de trabalho
+# Configurar diretório de trabalho
 WORKDIR /app
 
-# Copia os arquivos do projeto para o contêiner
-COPY . /app
+# Instalar dependências Python
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Instala as dependências do Python do projeto
-RUN pip install -r requirements.txt
+# Expor porta para o Flask
+EXPOSE 5000
 
-# Comando para rodar a aplicação (ajuste conforme seu script principal)
-CMD ["python", "main.py"]
+# Comando final para rodar o app
+COPY . .
+CMD ["python", "run.py"]
