--- a/back-end/DockerFile
+++ b/back-end/DockerFile
@@ -18,6 +18,9 @@ RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.d
     && dpkg -i google-chrome-stable_current_amd64.deb || apt-get -fy install \
     && rm google-chrome-stable_current_amd64.deb
 
+    # Verificar se o binário do Chrome está no PATH.
+RUN which google-chrome-stable
+
 # Configurar diretório de trabalho
 WORKDIR /app
 
